--- a/css_syntax.css
+++ b/css_syntax.css
@@ -27,3 +27,39 @@ ul li a {
   text-decoration: none;
   color: inherit;
 }
+
+input[type="radio"] {
+  -webkit-appearance: none;
+  width: 27px;
+  height: 27px;
+  background-image: url(stars.png);
+  vertical-align: bottom;
+  cursor: pointer;
+  outline: none;
+}
+
+input[type="radio"]:checked {
+  background-position: 30px 30px;
+}
+
+input[type="submit"] {
+  cursor: pointer;
+  outline: none;
+}
+
+select {
+  cursor: pointer;
+  outline: none;
+}
+
+input:last-child {
+  background: gold;
+}
+
+input:last-child:hover {
+  -webkit-filter: brightness(50%);
+}
+
+ol li:nth-of-type(2n) {
+  background-color: grey;
+}
