--- a/css_syntax.css
+++ b/css_syntax.css
@@ -63,3 +63,50 @@ input:last-child:hover {
 ol li:nth-of-type(2n) {
   background-color: grey;
 }
+
+nav {
+  display: inline-block;
+}
+
+nav ul li a {
+  padding: 20px;
+  display: block;
+}
+
+body {
+  margin: 0 auto;
+  width: 900px;
+}
+
+section {
+  width :700px;
+  display: inline-block;
+  vertical-align: top;
+}
+
+aside {
+  width: 180px;
+  margin-right: 15px;
+  display: inline-block;
+}
+
+.ingredients-list li {
+  margin: 15px 0px;
+}
+
+input[type="text"], select {
+  display: block;
+  width: 175px;
+}
+
+select {
+  margin: 10px 0;
+}
+
+textarea {
+  width: 350px;
+}
+
+label {
+  display: block;
+}
